Login con Firebase

--- a/src/app/components/form-categorias/form-categorias.component.html
+++ b/src/app/components/form-categorias/form-categorias.component.html
@@ -22,7 +22,7 @@
             routerLink="/categorias">
                 Volver
             </a>
-            <button type="submit" class="btn btn-primary">Guardar</button>
-        </div>        
+            <button class="btn btn-primary" (click)="crearCategoria()">Guardar</button>
+        </div>
       </form>
 </div>
