--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
         <br>
         <h3 class="text-center">Iniciar Sesión</h3>
 
-        <form>
+        <form [formGroup]="formRegistro" (ngSubmit)="onSubmit()">
             <div class="form-outline mb-4">
                 <input type="email" id="correo" formControlName="correo" class="form-control">
                 <label class="form-label" for="correo">Correo Electronico</label>
